# my_own_cnn

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  arcface.cu  arcface.h  arcface_test.cu  bmm.cu  bmm.h  bmm_bench.cu  bmm_bench.exp  bmm_bench.lib  bmm_test.cu  build_auto.ps1  build_auto.sh  conv_chain_test.cu  conv_grad_check.cpp  conv_large_workspace_test.cu  conv_layer_test.cu  layernorm.cu  layernorm.h  quant_conv_test.cu  quant_error_u8.cu  readme.md  test.cu
include/: batchnorm.h  convolution.h  cross_entropy.h  pooling.h  softmax.h  tensor.h
src/: batchnorm.cpp  batchnorm_cuda.cu  bench.cpp  conv_layer.cu  conv_layer.h  conv_types.h  convolution.cpp  convolution_cuda.cu  convolution_cudnn.cpp  cpu_ref.cpp  cross_entropy.cpp  cross_entropy_cuda.cu  cuda_kernels.cu  cuda_utils.cpp  cuda_utils.h  cudnn_ref.cpp  main.cpp  nnalgebra_quantization.h  pooling.cpp  pooling_cuda.cu  softmax.cpp  softmax_cuda.cu  tensor.cpp  verify.cpp
tests/: batchnorm_test.cpp  convolution_test.cpp  cross_entropy_test.cpp  pooling_test.cpp  softmax_test.cpp
